<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SplashScreen!</string>
    <string name="app_name">So Ningbo</string>
    <string name="sign_in">Sign In</string>
    <string name="home_btn">Home</string>
    <string name="create_account">Create Account</string>
    <string name="registration_title">Registration</string>
    <string name="register_btn">Register</string>
    <string name="forgetpassword">ForgetPassword</string>
    <string name="but_back">Back</string>
    <string name="friends_title">friends</string>
    <string name="search_title">Search</string>
    <string name="search_go">GO</string>
    <string name="search_result">Results</string>
    <string name="search_back">Search</string>
    <string name="search_map">Map</string>
    <string name="network_open">Please open network connection.</string>
    <string name="server_state">Service not available</string>
    <string name="signin_loading">Loading...</string>
    <!-- Invite -->
    <string name="btn_invite">Invite</string>
    <string name="txt_invite_header">Invite Friends</string>

    <!-- Category -->
    <string name="txt_category_first_name">CategoryName</string>
    <string name="txt_category_first_id">Id</string>
    <!-- location -->
    <string name="txt_location_name">LocationName</string>
    <string name="txt_location_id">Id</string>
    <string name="locationName">Name:</string>
    <string name="locationTel">Tel:</string>

    <!-- 测试数据 -->
    <string name="place_hotel">Hotels</string>
    <string name="detail_place">Detail</string>
    <string name="btn_add_favorites">Add to Favorites</string>
    <string name="btn_make_event">Make Event</string>
    <string name="btn_call">Call</string>
    <string name="btn_directions">Directions</string>
    <string name="mainScreenMenu">Menu</string>
    <string name="mainScreenLocation">Locations</string>
    <string name="mainScreenSearch">Search</string>
    <string name="mainScreenFind">Find</string>
    <string name="mainScreenFriend">Friends</string>
    <string name="mainScreenFriendList">Friends</string>
    <string name="mainScreenEvents">Events</string>
    <string name="mainScreenSetting">Settings</string>

    <!-- 首页 -->
    <string name="recentview_headTitle">Recently viewed</string>
    <!-- menu -->
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>

    <!-- register photo -->
    <string name="graph_photo">Camera</string>
    <string name="local_photo">Photo Album</string>
    <string name="headImage_title">Set Profile Photo</string> <!-- Locations -->
    <string name="location_detail">Detail</string>

    <!-- Baidu Map -->
    <string name="baidu_check_network">Network Error!</string>
    <string name="baidu_check_connKey">Check Baidu Maps Key.</string>

</resources>