<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/PlaceHead"
        android:layout_width="fill_parent"
        android:layout_height="59dip"
        android:background="@drawable/background2" >

        <TextView
            android:id="@+id/txtRightEdge"
            android:layout_width="5dip"
            android:layout_height="59dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/right_edge" />

        <!-- 动态获取:txtHeading content -->

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="fill_parent"
            android:layout_height="59dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/detail_place"
            android:textColor="@color/titleColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/ButHomeTop"
            android:layout_width="98dip"
            android:layout_height="59dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/home"
            android:gravity="right|center"
            android:paddingRight="42dip"
            android:text="@string/place_hotel"
            android:textColor="@color/leftBtnColor"
            android:textSize="12sp" />
    </RelativeLayout>
    <!-- 需要动态获取:showDetail -->


    <!--
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="80dip"
        android:layout_below="@+id/showDetail"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>


        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>
    -->

    <LinearLayout
        android:id="@+id/detailInfo"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/PlaceHead" 
        android:orientation="vertical">

        <TextView
            android:id="@+id/showDetail"
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="Portman Hotel"
            android:textColor="@color/violet" />

        <EditText
            android:id="@+id/showAddress"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/showDetail"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="left"
            android:hint="Address:121 Ping Pong St" />
        
         <EditText
            android:id="@+id/showTel"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/showAddress"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:gravity="left"
            android:hint="Tel:3045 344 576" />
    </LinearLayout>
    <!--
    <EditText
        android:id="@+id/txtPlaceAddress"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/PlaceHead"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:gravity="left"
        android:hint="Address:"
        android:textColor="@color/violet"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtPlacePhone"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/txtPlaceAddress"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:gravity="left"
        android:hint="Tel:" />
    -->

    <Button
        android:id="@+id/btnAddFavorites"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailInfo"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/button_on"
        android:text="@string/btn_add_favorites"
        android:textColor="@color/violet" />

    <Button
        android:id="@+id/btnMakeEvent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddFavorites"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_on"
        android:text="@string/btn_make_event"
        android:textColor="@color/violet" />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMakeEvent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_on"
        android:text="@string/btn_call"
        android:textColor="@color/violet" />

    <Button
        android:id="@+id/btnDirections"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCall"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/button_on"
        android:text="@string/btn_directions"
        android:textColor="@color/violet" />

    <include
        android:id="@+id/include1"
        layout="@layout/footer" />

</RelativeLayout>